// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply variant styles corectly 1`] = `
<DocumentFragment>
  <div
    class="css-1xhj18k css-0"
    data-chakra-component="CStack"
  >
    <div
      class="css-1sgz2im"
      data-chakra-component="CBadge"
    >
      Subtle
    </div>
    <div
      class="css-ps6r4y"
      data-chakra-component="CBadge"
    >
      Solid
    </div>
    <div
      class="css-1bvhmsh"
      data-chakra-component="CBadge"
    >
      Outline
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-2cw9wt"
    data-chakra-component="CBadge"
  >
    500
  </div>
</DocumentFragment>
`;
